feat: Improve Log4j2 configuration and ensure BAM index handling for compatibility and robustness
- Introduced Log4j2 configuration files (`log4j2.component.properties`, `log4j2.xml`) for early initialization and compatibility with Java 17+.
- Replaced manual Log4j initialization with configuration-driven approach for cleaner code and reduced errors.
- Implemented BAM index existence checks and automatic creation in `GatkRunner`, ensuring seamless processing in `CallableLociProcessor`, `GatkHaplotypeCallerProcessor`, and `WgsMetricsProcessor`.
- Enhanced progress reporting in `GatkRunner` to handle detailed GATK and Picard log lines.
- Added JVM options for Log4j2 and GATK compatibility with modern Java versions in `build.sbt`.
- Updated `GenomeNavigatorApp` and related components to remove legacy Log4j initialization logic.